# pcs

./: .eslintrc  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  AI-policy.md  CHANGELOG.md  CHANGELOG.md.in  CONTRIBUTING.md  MANIFEST.in  Makefile  Makefile.am  Makefile.old  README  README.md  RELEASE.md  SECURITY.md  async_client.py  auth.rb  autogen.sh  ccs.py  cluster.rb  config.rb  config.ru  configure.ac  corosync.conf.template  corosync.py  dev_requirements.txt  fenceagent.rb  maketarballs.py  mypy.ini  newversion.py  newversion.py.in  parallel_tests_requirements.txt  pcs-gui  pcs-gui.rb  pcs-gui.service  pcs.pc.in  pcs.rb  (+27 more)
pcs/: Makefile.am  acl.py  alert.py  api_v2_client.in  api_v2_client.py  app.py  async_client  async_client.in  async_client.py  booth.py  cli.py  client.py  cluster.py  cluster.py.in  config.py  constraint.py  corosync.conf.fedora.template  corosync.py  corosync_conf.py  error_codes.py  errors.py  host.py  library_acl.py  library_pacemaker.py  library_resource.py  library_status_info.py  node.py  pcs  pcs.8  pcs.8.in  pcs.in  pcs.py  pcs_for_tests  pcs_internal  pcs_internal.in  pcs_internal.py  pcsd.py  prop.py  qdevice.py  quorum.py  (+15 more)
pcs/bash_completion/: pcs
pcs/cli/: client.py  cluster_property.py  dr.py  errors.py  fencing_topology.py  host.py  nvset.py  resource_agent.py  rule.py
pcs/common/: auth.py  booth_dto.py  capabilities.py  cfgsync_dto.py  check_host_dto.py  cluster_dto.py  const.py  corosync_conf.py  dr.py  env_file_role_codes.py  fencing_topology.py  file.py  file_type_codes.py  host.py  node_communicator.py  pcs_pycurl.py  report_codes.py  reports.py  resource_agent_dto.py  resource_status.py  sbd_dto.py  services_dto.py  ssl.py  status_dto.py  str_tools.py  system.py  system.py.in  tools.py  types.py  validate.py  version_dto.py
pcs/daemon/: app.py  app_gui.py  app_remote.py  app_session.py  app_spa.py  app_ui.py  auth.py  cfgsync.py  env.py  gui.py  http_server.py  log.py  pcs_cfgsync.py  ruby_pcsd.py  ruby_pcsd_proxy.py  run.py  session.py  sinatra.py  ssl.py  systemd.py
pcs/entry_points/: __init__.py  cli.py  common.py  daemon.py  internal.py  snmp_agent.py
pcs/lib/: cluster_conf_facade.py  cluster_property.py  env.py  env_file.py  env_tools.py  error_codes.py  errors.py  exchange_formats.md  external.py  external.py.in  file_interfaces.py  node.py  node_communication.py  node_communication_format.py  nodes_task.py  pacemaker.py  pacemaker_state.py  pacemaker_values.py  reports.py  resource_agent.py  sbd.py  sbd_stonith.py  services.py  tools.py  validate.py  xml_tools.py
pcs/snmp/: Makefile  pcs_snmp_agent  pcs_snmp_agent.8  pcs_snmp_agent.8.in  pcs_snmp_agent.in  pcs_snmp_agent.logrotate  pcs_snmp_agent.py  pcs_snmp_agent.service  pcs_snmp_agent.service.in  settings.py  settings.py.in
pcs/test/: .gitignore  Makefile  a.xml  corosync.conf  corosync.conf.orig  curl_test.py  final.xml  large.xml  library_test_tools.py  pcs_test_assertions.py  pcs_test_functions.py  resource_create.py  suite.py  test.py  test.sh  test.xml  test_acl.py  test_alert.py  test_assertions.py  test_booth.py  test_cluster.py  test_cluster_pcmk_remote.py  test_common_tools.py  test_constraints.py  test_corosync_conf.py  test_lib_cib_acl.py  test_lib_cib_tools.py  test_lib_commands_qdevice.py  test_lib_commands_quorum.py  test_lib_commands_sbd.py  test_lib_corosync_config_facade.py  test_lib_corosync_config_parser.py  test_lib_corosync_live.py  test_lib_corosync_qdevice_client.py  test_lib_corosync_qdevice_net.py  test_lib_env.py  test_lib_external.py  test_lib_node.py  test_lib_nodes_task.py  test_lib_pacemaker.py  (+18 more)
pcs_test/: Makefile.am  __init__.py  api_v2_client.in  api_v2_client.py  curl_test.py  pcs_for_tests  pcs_for_tests.in  settings.py.in  smoke.sh  smoke.sh.in  suite.in  suite.py  suite.py.in
pcs_test/resources/: based_metadata.xml  capabilities.xml  cib-all.xml  cib-empty-1.2.xml  cib-empty-2.5.xml  cib-empty-3.1.xml  cib-empty-3.2.xml  cib-empty-3.3.xml  cib-empty-3.4.xml  cib-empty-3.5.xml  cib-empty-3.7.xml  cib-empty-3.9.xml  cib-empty-with3nodes.xml  cib-empty-withnodes.xml  cib-fencing-levels.xml  cib-large.xml  cib-largefile.xml  cib-non-primitive-secrets.xml  cib-property.xml  cib-remote.xml  cib-resources.xml  cib-rule-several-times-in-constraint.xml  cib-rule-with-spaces-in-date.xml  cib-status.xml  cib-tags.xml  cib-unexportable-constraints.xml  cib-unsupported-stonith-config.xml  cluster-options_metadata.xml  commands-alert  constraint-commands  controld_metadata.xml  corosync-3nodes-qdevice.conf  corosync-3nodes.conf  corosync-no-node-names.conf  corosync-qdevice.conf  crm_mon.all_resources.xml  crm_mon.minimal.xml  crm_mon.rng.with_fence_history.xml  crm_mon.rng.without_fence_history.xml  fenced_metadata.xml  (+17 more)
pcs_test/tier0/: test_acl.py  test_alert.py  test_booth.py  test_capabilities.py  test_cluster.py  test_cluster_pcmk_remote.py  test_constraints.py  test_host.py  test_lint.py  test_misc.py  test_node.py  test_properties.py  test_quorum.py  test_resource.py  test_rule.py  test_status.py  test_stonith.py  test_utils.py
pcs_test/tier1/: test_alert.py  test_booth.py  test_booth.py.in  test_cib.py  test_cib_options.py  test_cluster_pcmk_remote.py  test_cluster_property.py  test_misc.py  test_node.py  test_quorum.py  test_status.py  test_status_query_resource.py  test_tag.py
pcs_test/tools/: assertions.py  case_analysis.py  cib.py  constraints_dto.py  custom_mock.py  fixture.py  fixture_cib.py  fixture_crm_mon.py  (+10 more)
pcsd/: Gemfile  Makefile  Makefile.am  api_v1.rb  auth.rb  bootstrap.rb  bootstrap.rb.in  capabilities.rng  capabilities.xml  capabilities.xml.in  cfgsync.rb  cluster.rb  cluster_entity.rb  config.rb  config.ru  corosyncconf.rb  fenceagent.rb  pcs.rb  pcs.rb.in  pcs_password.rb  pcsd  pcsd-cli-main.rb  pcsd-cli.rb  pcsd-cli.rb.in  pcsd-ruby.service  pcsd-ruby.service.in  pcsd.8  pcsd.8.in  pcsd.conf  pcsd.debian  pcsd.in  pcsd.logrotate  pcsd.pam.debian  pcsd.rb  pcsd.service  pcsd.service-runner  pcsd.service.debian  pcsd.service.in  pcsd_action_command.rb  pcsd_exchange_format.rb  (+19 more)
(+1356 files in other folders)
